feature: on socket event open and close

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en")
+html(lang="ko")
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
@@ -10,5 +10,8 @@ html(lang="en")
         header
             h1 It works?
         main 
-            h3 hello my discord
+            ul
+            form
+                input(type="text", placeholder="#My Discord에 메시지 보내기", required)
+                button Send
         script(src="/public/js/app.js") 
