--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,9 +9,12 @@ html(lang="ko")
     body 
         header
             h1 It works?
-        main 
+        main
+            form#nickname
+                input(type="text", placeholder="what's my name?", required)
+                button Save
             ul
-            form
+            form#message
                 input(type="text", placeholder="#My Discord에 메시지 보내기", required)
                 button Send
         script(src="/public/js/app.js") 
