--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,15 @@ html(lang="ko")
         header
             h1 It works?
         main
-            form#nickname
-                input(type="text", placeholder="what's my name?", required)
-                button Save
-            ul
-            form#message
-                input(type="text", placeholder="#My Discord에 메시지 보내기", required)
-                button Send
+            div#inputContainer
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+            div#room
+                h3
+                ul 
+                form
+                    input(placeholder="message", required, type="text")
+                    button send
+        script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js") 
